--- a/GOATHerdBase.ipynb
+++ b/GOATHerdBase.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "aa0be18b-6827-47e6-8e59-e423c96af84d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'username': 'neo4jroot', 'password': 'theansweris42', 'dbname': 'neo4j', 'dburl': 'host.docker.internal:7687', 'dbport': '7687'}\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -22,12 +30,13 @@
     "from goatherd import *\n",
     "# Connect to the GOATs\n",
     "neo4jconfig=get_mgc(\"neo4j\")\n",
-    "neo4jdb=MojoGoat(neo4jconfig)"
+    "print(neo4jconfig)\n",
+    "neo4jdb=Neo4jGoat(neo4jconfig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ab96b382",
    "metadata": {},
    "outputs": [],
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0432c5ab",
    "metadata": {
     "scrolled": true
@@ -76,12 +85,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Organization': 264}, {'Govt Body': 1}, {'Node': 1911}, {'Person': 1405}, {'Division': 1}]\n",
+      "[{'Cost': 2}, {'Person': 2}, {'Company': 2}, {'Outcome': 2}, {'Node': 2}, {'Organization': 2}, {'Pillar': 2}, {'Strategy': 2}, {'NGO': 2}, {'BoW': 2}, {'Lever': 2}, {'Division': 2}, {'Investment': 2}, {'Govt Body': 2}, {'Funding Envelope': 2}, {'Output': 2}]\n",
       "__keystone1\n",
-      "Adding new node\n",
+      "Node exists\n",
       "__keystone2\n",
-      "Adding new node\n",
-      "[{'Organization': 266}, {'Pillar': 2}, {'Govt Body': 3}, {'Node': 1913}, {'BoW': 2}, {'NGO': 2}, {'Person': 1407}, {'Funding Envelope': 2}, {'Outcome': 2}, {'Company': 2}, {'Output': 2}, {'Strategy': 2}, {'Lever': 2}, {'Cost': 2}, {'Investment': 2}, {'Division': 3}]\n"
+      "Node exists\n",
+      "[{'Cost': 2}, {'Person': 2}, {'Company': 2}, {'Outcome': 2}, {'Node': 2}, {'Organization': 2}, {'Pillar': 2}, {'Strategy': 2}, {'NGO': 2}, {'BoW': 2}, {'Lever': 2}, {'Division': 2}, {'Investment': 2}, {'Govt Body': 2}, {'Funding Envelope': 2}, {'Output': 2}]\n"
      ]
     }
    ],
