--- a/GOATHerdBase.ipynb
+++ b/GOATHerdBase.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "aa0be18b-6827-47e6-8e59-e423c96af84d",
    "metadata": {},
    "outputs": [
@@ -18,14 +18,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'username': 'neo4jroot', 'password': 'theansweris42', 'dbname': 'neo4j', 'dburl': 'host.docker.internal:7687', 'dbport': '7687'}\n"
+      "{'username': 'neo4j', 'password': 'theansweris42', 'dbname': 'neo4j', 'dburl': 'localhost:7687', 'dbport': '7687'}\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append(\"/opt/xpal-data/goatherd\")\n",
+    "sys.path.append(\"/xpal-src/goatherd\")\n",
     "\n",
     "from goatherd import *\n",
     "# Connect to the GOATs\n",
@@ -36,28 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "ab96b382",
    "metadata": {},
    "outputs": [],
    "source": [
     "labels=[\n",
     "    'Person',\n",
-    "    'Organization',\n",
+    "    'Brand',\n",
     "    'Company',\n",
     "    'NGO',\n",
     "    'Govt Body',\n",
-    "    'Division',\n",
     "    'Node',\n",
-    "    'Outcome',\n",
-    "    'Cost',\n",
-    "    'Output',\n",
-    "    'Lever',\n",
-    "    'Pillar',\n",
-    "    'BoW',\n",
-    "    'Strategy',\n",
-    "    'Investment',\n",
-    "    'Funding Envelope'\n",
     "]\n",
     "def update_keystones(goat):\n",
     "    k1=goat.add_node(nodeid=\"__keystone1\")\n",
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "0432c5ab",
    "metadata": {
     "scrolled": true
@@ -85,12 +75,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Cost': 2}, {'Person': 2}, {'Company': 2}, {'Outcome': 2}, {'Node': 2}, {'Organization': 2}, {'Pillar': 2}, {'Strategy': 2}, {'NGO': 2}, {'BoW': 2}, {'Lever': 2}, {'Division': 2}, {'Investment': 2}, {'Govt Body': 2}, {'Funding Envelope': 2}, {'Output': 2}]\n",
+      "[{'Node': 1}, {'Organization': 1}, {'Company': 1}]\n",
       "__keystone1\n",
-      "Node exists\n",
+      "Adding new node\n",
       "__keystone2\n",
-      "Node exists\n",
-      "[{'Cost': 2}, {'Person': 2}, {'Company': 2}, {'Outcome': 2}, {'Node': 2}, {'Organization': 2}, {'Pillar': 2}, {'Strategy': 2}, {'NGO': 2}, {'BoW': 2}, {'Lever': 2}, {'Division': 2}, {'Investment': 2}, {'Govt Body': 2}, {'Funding Envelope': 2}, {'Output': 2}]\n"
+      "Adding new node\n",
+      "[{'Person': 2}, {'Govt Body': 2}, {'NGO': 2}, {'Brand': 2}, {'Company': 3}, {'Node': 3}, {'Organization': 1}]\n"
      ]
     }
    ],
@@ -99,6 +89,89 @@
     "update_keystones(neo4jdb)\n",
     "print(neo4jdb.get_compostion())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "42abb074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company={\"nodeid\": \"U85300DL2022PTC402649\", \"companyname\": \"HCAH SENIOR CARE PRIVATE LIMITED\", \"urls\": [\"https://www.tofler.in/hcah-senior-care-private-limited/company/U85300DL2022PTC402649\", \"https://www.hcah.in\"], \"labels\": [\"Company\", \"Organization\", \"Node\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "42643e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nodeid': 'U85300DL2022PTC402649',\n",
+       " 'companyname': 'HCAH SENIOR CARE PRIVATE LIMITED',\n",
+       " 'urls': ['https://www.tofler.in/hcah-senior-care-private-limited/company/U85300DL2022PTC402649',\n",
+       "  'https://www.hcah.in'],\n",
+       " 'labels': ['Company', 'Organization', 'Node']}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6b343385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U85300DL2022PTC402649\n",
+      "Node exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=neo4jdb.add_node(**company)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "03cc70b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":Company:Node:Organization"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neo4jdb.update_labels(n.nodeid,company['labels'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca5e678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -120,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
