--- a/GOATHerdBase.ipynb
+++ b/GOATHerdBase.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "aa0be18b-6827-47e6-8e59-e423c96af84d",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'username': 'neo4j', 'password': 'theansweris42', 'dbname': 'neo4j', 'dburl': 'localhost:7687', 'dbport': '7687'}\n"
+      "{'username': 'neo4j', 'password': 'theansweris42', 'dbname': 'gegoat', 'dburl': 'host.docker.internal:7687', 'dbport': '7687'}\n"
      ]
     }
    ],
@@ -29,14 +29,14 @@
     "\n",
     "from goatherd import *\n",
     "# Connect to the GOATs\n",
-    "neo4jconfig=get_mgc(\"neo4j\")\n",
+    "neo4jconfig=get_mgc(\"gegoat\")\n",
     "print(neo4jconfig)\n",
     "neo4jdb=Neo4jGoat(neo4jconfig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "ab96b382",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "0432c5ab",
    "metadata": {
     "scrolled": true
@@ -75,19 +75,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Node': 1}, {'Organization': 1}, {'Company': 1}]\n",
+      "[{'Company': 2}, {'Contract': 2}, {'Person': 2}, {'Funding Source': 2}, {'Brand': 2}, {'Partner': 2}, {'Govt Body': 2}, {'Investment Officer': 8}, {'Grant': 2}, {'NGO': 2}, {'Node': 86}, {'Investment': 80}]\n",
       "__keystone1\n",
-      "Adding new node\n",
+      "Node exists\n",
       "__keystone2\n",
-      "Adding new node\n",
-      "[{'Person': 2}, {'Govt Body': 2}, {'NGO': 2}, {'Brand': 2}, {'Company': 3}, {'Node': 3}, {'Organization': 1}]\n"
+      "Node exists\n",
+      "[{'Company': 2}, {'Contract': 2}, {'Person': 2}, {'Funding Source': 2}, {'Brand': 2}, {'Partner': 2}, {'Govt Body': 2}, {'Investment Officer': 8}, {'Grant': 2}, {'NGO': 2}, {'Node': 86}, {'Investment': 80}]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Company': 2},\n",
+       " {'Contract': 2},\n",
+       " {'Person': 2},\n",
+       " {'Funding Source': 2},\n",
+       " {'Brand': 2},\n",
+       " {'Partner': 2},\n",
+       " {'Govt Body': 2},\n",
+       " {'Investment Officer': 8},\n",
+       " {'Grant': 2},\n",
+       " {'NGO': 2},\n",
+       " {'Node': 86},\n",
+       " {'Investment': 80}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(neo4jdb.get_compostion())\n",
     "update_keystones(neo4jdb)\n",
-    "print(neo4jdb.get_compostion())"
+    "print(neo4jdb.get_compostion())\n",
+    "neo4jdb.get_compostion()"
    ]
   },
   {
