--- a/GOATHerdBase.ipynb
+++ b/GOATHerdBase.ipynb
@@ -193,7 +193,62 @@
    "id": "9ca5e678",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Get the list of relationships defined in the IncDig excel sheet\n",
+    "file_path = \"/xpal-data/IncDig.xlsx\"\n",
+    "df = pd.read_excel(file_path,\"RelLabels\")\n",
+    "print(df)\n",
+    "reldict=df.to_dict(orient=\"records\")\n",
+    "def get_rel_labels(rel):\n",
+    "    return [x for x in reldict if x['rel']==rel]\n",
+    "file_path = \"/xpal-data/IncDig.xlsx\"\n",
+    "df = pd.read_excel(file_path)\n",
+    "rellist=df.to_dict(orient=\"records\")\n",
+    "rellist,reldict\n",
+    "\n",
+    "# Write df back to the same worksheet \n",
+    "with pd.ExcelWriter(file_path, engine='openpyxl', mode='a') as writer:\n",
+    "    df.to_excel(writer, sheet_name=\"RelLabels\",index=False)\n",
+    "\n",
+    "for rel in rellist:\n",
+    "    labels=get_rel_labels(rel['story'])\n",
+    "    sourcelabels=list(set([\"Node\"]+list(neo4jdb.get_labels(rel['source']))+[x.lstrip().rstrip() for x in labels['sourcelabels'].lstrip().strip().split(\",\")]))\n",
+    "    targetlabels=list(set([\"Node\"]+list(neo4jdb.get_labels(rel['target']))+[x.lstrip().rstrip() for x in labels['targetlabels'].lstrip().strip().split(\",\")]))\n",
+    "    neo4jdb.update_labels(rel['source'],sourcelabels)\n",
+    "    neo4jdb.update_labels(rel['target'],targetlabels)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4426367a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in sherrymap:\n",
+    "    rels=[]\n",
+    "    invnodeid=row['invid'].lower().lstrip().rstrip().replace(\"-\",\"\")\n",
+    "    source=neo4jdb.repo.match(Node,invnodeid).first()\n",
+    "    if source is None:\n",
+    "        print(\"Adding Investment\")\n",
+    "        add_investment(invdict)\n",
+    "    story=row['story'].lstrip().rstrip()\n",
+    "    if row['qtarget']!=\"\":\n",
+    "        try:\n",
+    "            qtarget=neo4jdb.repo.match(Node,row['qtarget'].lstrip().strip()).first()\n",
+    "            if qtarget is not None:\n",
+    "                print(source.nodeid,story,qtarget.nodeid)\n",
+    "        except:\n",
+    "            print(row)\n",
+    "    starget=neo4jdb.repo.match(Node,row['sectarget'].lstrip().strip()).first()\n",
+    "    if starget is not None:\n",
+    "        print(source.nodeid,story,starget.nodeid)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
